# hs_tagger

./: Paths_tagger.hs  README.md  Tagger.hs  Tests.hs  tagger  tagger.cabal
Tagger/: Data.hs  Tag.hs
data/: lexicon.txt
src/: LICENSE  Main.hs  Tagger.hs  tagger.cabal
src/Tagger/: Data.hs  Tag.hs  Tokenize.hs
